# avr-xy-doodles

./: .clang-format  .editorconfig  README.md  flake.nix  meson.build  meson.options  treefmt.toml
doodles/: arduino.yaml  cooper-union.yaml  stem-2.yaml  stem.yaml
include/avr-xy-doodles/: display.h  doodle.h  fixed-point.h  shape.h  sinpi.h  timer.h
include/avr-xy-doodles/private/: display.h  fixed-point.h
meson/cross/: shared.ini
meson/cross/mcu/: atmega328p.ini
scenes/: summer-stem.yaml
src/: display.c  fixed-point.c  fuses.c  main.c  meson.build  sinpi.c  timer.c
tools/: scene2c.py  sinpi-lookup.py
